# ComputerVision

./: CMakeLists.txt  README.md  challenge.hpp  fun.m  main.cpp  project1.cpp  project1.hpp  project2.hpp  project2_question3.m
assignment1/: project1.hpp  readme.md  readme.txt  test1.cpp
assignment1/src/: CMakeLists.txt
assignment2/: readme.md  readme.txt  util.h
assignment2/src/: CMakeLists.txt  project2.hpp  test2.cpp  test3.cpp
assignment3/: readme.md  readme.txt
assignment3/cplus/: CMakeLists.txt  gold_standard.cpp  gold_standard.h  header.h  main.cpp
assignment3/matlab/: challenge.m  getpoints.m
assignment3/src/cplus/: calibration.cpp  calibration.h  distortion.cpp  distortion.h  lmmin.cpp  util.cpp  util.h
assignment3/src/matlab/: verif.m
assignment4/: calibrate.cpp  calibrate.h  p3p.cpp  p3p.h  readme.md  readme.txt  solve_polynom.cpp
assignment4/src/: CMakeLists.txt  global.h  main.cpp  solve_polynom.h
assignment5/: CMakeLists.txt  fundmentalM.cpp  fundmentalM.h  main.cpp  pluker.m  projective3D.m  readme.md  readme.txt
assignment5/src/: affin3D.m  header.h
header/: project2.hpp
project3/: normalize.m  removeDistortion.m  runGoldenAlgorithm.m  undistortimage.m
src/: CMakeLists.txt  challenge.cpp  test1.cpp  test2.cpp
